fix: adjust dark mode accent color

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -75,7 +75,7 @@
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(79.2% 0.209 151.711);
+  --accent: oklch(72.3% 0.219 149.579);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
